: Fix letter spacing in input placeholder

--- a/src/uikit/input/input.scss
+++ b/src/uikit/input/input.scss
@@ -30,20 +30,24 @@ $border-width: 1px;
     opacity: 0.6;
     font-size: 17px;
     color: $placeholder;
+    letter-spacing: -0.43px;
   }
   ::-moz-placeholder {
     opacity: 0.6;
     font-size: 17px;
     color: $placeholder;
+    letter-spacing: -0.43px;
   }
   :-ms-input-placeholder {
     opacity: 0.6;
     font-size: 17px;
     color: $placeholder;
+    letter-spacing: -0.43px;
   }
   :-moz-placeholder {
     opacity: 0.6;
     font-size: 17px;
     color: $placeholder;
+    letter-spacing: -0.43px;
   }
 }
